fix: UI drag up issue on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -225,7 +225,7 @@ body {
   top: 0px;
   left: 0px;
   width: 100%;
-  height: 100vh;
+  height: 100dvh;
   overflow: hidden;
   will-change: transform;
 }
